# advent-calendar-2024-batch

./: .dockerignore  .gitignore  Dockerfile  README.md  batchjob.yaml  ng_word.txt  pre_filter.diff  pre_filter.py  pyproject.toml  requirements.txt
data/: sample_input.jsonl
output/: sample_output.jsonl
