[project]
name = "ailab-advent-calendar-2024-batch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.1.0",
    "hojichar>=0.11.4",
    "huggingface-hub>=0.26.5",
    "lm-dataformat",
    "psutil>=6.1.0",
    "sentencepiece>=0.2.0",
    "zstandard>=0.23.0",
    "kenlm",
]

[tool.uv.sources]
lm-dataformat = { git = "https://github.com/EleutherAI/lm_dataformat.git", rev = "4eec05349977071bf67fc072290b95e31c8dd836" }
kenlm = { git = "https://github.com/kpu/kenlm.git", rev = "f6c947dc943859e265fabce886232205d0fb2b37" }
